<resources>
    <string name="app_name">FindMyRoute</string>

    <string name="pref_fuel_checkbox_key" translatable="false">pref_fuel_checkbox</string>
    <string name="pref_restaurant_checkbox_key" translatable="false">pref_restaurant_checkbox</string>
    <string name="pref_restaurant_checkbox_title">Restaurants</string>
    <string name="pref_fuel_title">Fuel stations</string>
    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>
    <string name="action_settings">settings</string>

    <string name="error_enter_valid_email">Enter a valid email</string>
    <string name="error_password_less_than_six_character_long">Password must be at least 6 characters long</string>
    <string name="check_internet_connectivity">Check internet connectivity</string>
    <string name="toast_problem_creating_account">Problem creating an account</string>
    <string name="login_heading">Login</string>
    <string name="email_hint">E-mail address</string>
    <string name="password_hint">Password</string>
    <string name="main_button_login">Login Now</string>
    <string name="button_forgot_password">Don\'t you remember your password?</string>
    <string name="divider_or">Or</string>
    <string name="button_google_login">Sign in with Google</string>
    <string name="button_sigh_up">Don\'t have an account yet? Sign Up</string>
    <string name="create_account_heading">Create an account</string>
    <string name="user_name_hint">Name</string>
    <string name="user_city_hint">City</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_already_registered">Do you have an account? Login</string>
    <string name="reset_password_heading">Send reset password instruction</string>
    <string name="button_sign_not_registered">Sign me up instead</string>
    <string name="heading_forgot_password">Forgot password?</string>
    <string name="sub_haeding_forgot_password">Give us your email, we\'ll reset that up</string>
    <string name="error_enter_your_name">Enter your name</string>
    <string name="error_enter_your_city">Enter your city</string>
    <string name="firebase_database_child_drives">drives</string>
    <string name="toast_authentication_failed">Authentication failed. Please check your email or passowrd</string>
    <string name="heading_upcoming_drive">Upcoming Drives</string>
    <string name="fab_for_new_post_creation">FAB for creating new post</string>
    <string name="toast_password_reset_instruction_sent">Password reset instructions sent to your registered email</string>
    <string name="error_email_not_registered">Please check your email. Looks like you\'re not registered with us</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="heading_employer">Employer</string>
    <string name="heading_recruitment_date">Drive on:</string>
    <string name="heading_recruitment_location">Drive to be held at:</string>
    <string name="heading_job_profile">Job profile:</string>
    <string name="current_upcoming_drive_key">CurrentDrive</string>
    <string name="drive_details_bundle_key">driveDetailsBundle</string>
    <string name="notification_title">New drive</string>
    <string name="heading_company_name">Company Name</string>
    <string name="heading_job_description">Drive description</string>
    <string name="publish_button">Publish</string>
    <string name="city_bengaluru">Bengaluru</string>
    <string name="city_pune">Pune</string>
    <string name="city_mumbai">Mumbai</string>
    <string name="city_new_delhi">New Delhi</string>
    <string name="city_hyderabad">Hyderabad</string>
    <string name="error_enter_company_name">Enter company name</string>
    <string name="error_enter_job_profile">Enter job profile</string>
    <string name="erroe_enter_job_description">Enter drive details</string>
    <string name="action_signout">sign out</string>
    <string name="origin_location_hint">Choose the origin location</string>
    <string name="destination_location_hint">Choose the destination location</string>
    <string name="action_save">save</string>
    <string name="firebase_database_child_routes">Routes</string>
    <string name="action_retrieve_saved_paths">retrieve saved paths</string>
</resources>
