<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_retrieve_saved_paths"
        android:orderInCategory="100"
        android:title="@string/action_retrieve_saved_paths"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="1"
        android:title="@string/action_signout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="200"
        android:title="@string/action_privacy_policy"
        app:showAsAction="never" />
</menu>